[project]

name = "curve_visualizer"
readme = "README.md"
keywords = ["conda"]
dynamic = ["version"]
requires-python = ">=3.12"
description = "A package to visualize curve contained in a Database, and the program to build database."

authors = [
    { name = "Stefano Pilosio", email = "stefano.pilosio@studenti.unimi.it" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.0",
    "pyside6==6.6.0",
    # "qt6-main==6.6.0",
    "scipy>=1.11",
    "scikit-learn >=1.3"
]


[project.scripts]
upDatabase = "curve_visualizer.upDatabase:main"
curve_visualizer = "curve_visualizer.curve_visualizer:main"

[project.gui-scripts]

curve_visualizer = "curve_visualizer.curve_visualizer:main"



[build-system]

requires = ["setuptools>=68.0", "setuptools-scm"]

build-backend = "setuptools.build_meta"


[project.urls]

Homepage = "https://github.com/RandDouble/Curve_Visualizer"
Issued = "https://github.com/RandDouble/Curve_Visualizer/issues"

[tool.setuptools_scm]
write_to = "src/curve_visualizer/_version.py"

[tool.pyright]

exclude = ["**/__pycache__"]


pythonVersion = "3.12"
pythonPlatform = "all"


[tool.ruff]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".vscode",
    "images",
    "802_SiOx_SB_1_1_12",
]


line-length = 90
indent-width = 4

target-version = "py312"

[tool.ruff.lint]

select = ["C901", "F", "W", "B"]
ignore = ["F401"]


# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
